[package]
name = "prismatic_visualizer"
version = "0.3.0"
edition = "2021"
authors = ["Digital Greenery"]

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36.0"
prismatic_color = { git = "https://github.com/digitalgreenery/prismatic-color.git" }
wasm-bindgen = "0.2.97"
bytemuck = "1.20.0"
indexmap = "2.10.0"

bevy_pointcloud = { git = "https://github.com/rlamarche/bevy_pointcloud.git", branch = "main" }