[package]
name = "prismatic_visualizer"
version = "0.3.1"
edition = "2021"
authors = ["Digital Greenery"]

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36.0"
prismatic_color = { git = "https://github.com/digitalgreenery/prismatic-color.git" }
wasm-bindgen = "0.2.101"
bytemuck = "1.23.2"
indexmap = "2.11.1"

bevy_pointcloud = { git = "https://github.com/rlamarche/bevy_pointcloud.git", branch = "main" }
getrandom = { version = "0.3", features = ["wasm_js"] }